--- a/bear/index.html
+++ b/bear/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="zh-CN">
 
 <head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://example.com/images/favicon.png" />
-<title>联系 | Hugo ʕ•ᴥ•ʔ Bear Blog</title>
+<title>联系 | 杨靖武 ʕ•ᴥ•ʔ 自由主义者</title>
 <meta name="title" content="联系" />
 <meta name="description" content="Bear Website: https://bearblog.dev
 There is a website obesity crisis. Bloated websites are full of scripts, ads, and trackers slowing your readers down every time they try to read your well-crafted content.
@@ -226,7 +226,7 @@ Bear makes it simple to publish content online and grow an audience while keepin
 
 <body>
   <header><a href="/" class="title">
-  <h2>Hugo ʕ•ᴥ•ʔ Bear Blog</h2>
+  <h2>杨靖武 ʕ•ᴥ•ʔ 自由主义者</h2>
 </a>
 <nav><a href="/">Home</a>
 
