--- a/hugo/index.html
+++ b/hugo/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="zh-CN">
 
 <head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://example.com/images/favicon.png" />
-<title>简历 | Hugo ʕ•ᴥ•ʔ Bear Blog</title>
+<title>简历 | 杨靖武 ʕ•ᴥ•ʔ 自由主义者</title>
 <meta name="title" content="简历" />
 <meta name="description" content="Hugo Website: https://gohugo.io
 Written in Go, Hugo is an open-source static site generator available under the Apache Licence 2.0. Hugo supports TOML, YAML, and JSON data file types, Markdown and HTML content files, and uses shortcodes to add rich content. Other notable features are taxonomies, multilingual mode, image processing, custom output formats, HTML/CSS/JS minification, and support for Sass SCSS workflows.
@@ -222,7 +222,7 @@ Hugo makes use of a variety of open source projects including:">
 
 <body>
   <header><a href="/" class="title">
-  <h2>Hugo ʕ•ᴥ•ʔ Bear Blog</h2>
+  <h2>杨靖武 ʕ•ᴥ•ʔ 自由主义者</h2>
 </a>
 <nav><a href="/">Home</a>
 
