Add tool and contact pages

--- a/404.html
+++ b/404.html
@@ -209,13 +209,13 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Hugo ʕ•ᴥ•ʔ Bear Blog</h2>
+  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
 </a>
 <nav><a href="/">Home</a>
 
-<a href="/hugo/">简历</a>
+<a href="/tool/">工具</a>
 
-<a href="/bear/">联系</a>
+<a href="/contact/">联系</a>
 
 
 <a href="/blog">Blog</a>
