--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://example.com/images/favicon.png" />
-<title>Hugo ʕ•ᴥ•ʔ Bear Blog</title>
-<meta name="title" content="Hugo ʕ•ᴥ•ʔ Bear Blog" />
+<title>杨靖武 ʕ•ᴥ•ʔ</title>
+<meta name="title" content="杨靖武 ʕ•ᴥ•ʔ" />
 <meta name="description" content="Hugo &#43; Bear = :heart:" />
 <meta name="keywords" content="markdown,syntax," />
 
@@ -33,7 +33,7 @@
 <meta itemprop="description" content="Hugo &#43; Bear = :heart:">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://example.com/index.xml" title="Hugo ʕ•ᴥ•ʔ Bear Blog" />
+  <link rel="alternate" type="application/rss+xml" href="https://example.com/index.xml" title="杨靖武 ʕ•ᴥ•ʔ" />
   <style>
   body {
     font-family: Verdana, sans-serif;
@@ -211,13 +211,13 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Hugo ʕ•ᴥ•ʔ Bear Blog</h2>
+  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
 </a>
 <nav><a href="/">Home</a>
 
-<a href="/hugo/">简历</a>
+<a href="/tool/">工具</a>
 
-<a href="/bear/">联系</a>
+<a href="/contact/">联系</a>
 
 
 <a href="/blog">Blog</a>
@@ -225,18 +225,18 @@
 </nav>
 </header>
   <main>
-<p>你好，我叫杨靖武，<strong>比特币信徒、自由主义者</strong>，长居深圳。</p>
-<p>我一直从事政务信息化、安防产业发展，拥有8年以上行业经验，想了解更多信息，请查看<a href="https://reardonyang.com/resume">我的简历</a>。</p>
-<p>这里会记录一些日常琐碎，经验心得，还会转载一些文章。你还可以在<a href="https://www.douban.com/people/57644512/">💟豆瓣</a>找到我。</p>
+<p>💖 我叫杨靖武，<strong>比特币信徒、自由主义者</strong>，长居深圳。</p>
+<p>长期从事政务信息化、安防行业。</p>
+<p>这里会记录一些日常琐碎，经验心得，以及转载一些文章。你还可以在<a href="https://www.douban.com/people/57644512/">💟 豆瓣</a>找到我。</p>
 <hr>
 <p>近年来，我的工作重心是：</p>
 <ul>
 <li>深入理解比特币，为其在全世界的推广使用做贡献，探索区块链技术在政务行业的应用</li>
 <li>成为自由职业者</li>
 </ul>
-<p><strong>你可以在这里找到我的<a href="https://reardonyang.com/contact">📱联系方式</a></strong></p>
+<p><strong>你可以在这里找到我的<a href="https://reardonyang.com/contact">📱 联系方式</a></strong></p>
 <hr>
-<p>喜欢我的文章，可以给我打赏：</p>
+<p>喜欢我的文字，可以给我打赏：</p>
 <ul>
 <li>比特币：321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</li>
 <li>狗狗币：DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</li>
