--- a/markdown-syntax-guide/index.html
+++ b/markdown-syntax-guide/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://example.com/images/favicon.png" />
-<title>Markdown Syntax Guide | Hugo ʕ•ᴥ•ʔ Bear Blog</title>
+<title>Markdown Syntax Guide | 杨靖武 ʕ•ᴥ•ʔ</title>
 <meta name="title" content="Markdown Syntax Guide" />
 <meta name="description" content="Sample article showcasing basic Markdown syntax and formatting for HTML elements." />
 <meta name="keywords" content="markdown,syntax," />
@@ -214,13 +214,13 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Hugo ʕ•ᴥ•ʔ Bear Blog</h2>
+  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
 </a>
 <nav><a href="/">Home</a>
 
-<a href="/hugo/">简历</a>
+<a href="/tool/">工具</a>
 
-<a href="/bear/">联系</a>
+<a href="/contact/">联系</a>
 
 
 <a href="/blog">Blog</a>
