--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="zh-CN">
 
 <head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="https://example.com/images/favicon.png" />
+<link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="Hugo &#43; Bear = :heart:" />
@@ -15,13 +15,13 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Hugo &#43; Bear = :heart:" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://example.com/404.html" /><meta property="og:image" content="https://example.com/images/share.png"/><meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear" />
+<meta property="og:url" content="https://reardonyang.com/404.html" /><meta property="og:image" content="https://reardonyang.com/images/share.png"/><meta property="og:site_name" content="Huge ʕ•ᴥ•ʔ Bear" />
 
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://example.com/images/share.png"/>
+<meta name="twitter:image" content="https://reardonyang.com/images/share.png"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Hugo &#43; Bear = :heart:"/>
@@ -227,7 +227,7 @@
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
 
   </main>
-  <footer>Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>
+  <footer>
 </footer>
 
     
