--- a/contact/index.html
+++ b/contact/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="zh-CN">
 
 <head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="https://example.com/images/favicon.png" />
+<link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>联系 | 杨靖武 ʕ•ᴥ•ʔ</title>
 <meta name="title" content="联系" />
-<meta name="description" content="🐾 茶藍即菘藍，插根活。蓼藍、馬藍、吳藍等皆撒子生。近又出蓼藍小葉者俗名莧藍，種更佳。
+<meta name="description" content="😃 有朋自远方来，不亦乐乎
  还可以在这些地方找到我:
- 邮箱：reardonyang@gmail.com 豆瓣：查看详情 Github： 查看详情  " />
+ 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="联系" />
-<meta property="og:description" content="🐾 茶藍即菘藍，插根活。蓼藍、馬藍、吳藍等皆撒子生。近又出蓼藍小葉者俗名莧藍，種更佳。
+<meta property="og:description" content="😃 有朋自远方来，不亦乐乎
  还可以在这些地方找到我:
- 邮箱：reardonyang@gmail.com 豆瓣：查看详情 Github： 查看详情  " />
+ 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://example.com/contact/" /><meta property="og:image" content="https://example.com/images/share.png"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://reardonyang.com/contact/" /><meta property="og:image" content="https://reardonyang.com/images/share.png"/><meta property="article:section" content="" />
 
-<meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear" />
+<meta property="og:site_name" content="Huge ʕ•ᴥ•ʔ Bear" />
 
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://example.com/images/share.png"/>
+<meta name="twitter:image" content="https://reardonyang.com/images/share.png"/>
 
 <meta name="twitter:title" content="联系"/>
-<meta name="twitter:description" content="🐾 茶藍即菘藍，插根活。蓼藍、馬藍、吳藍等皆撒子生。近又出蓼藍小葉者俗名莧藍，種更佳。
+<meta name="twitter:description" content="😃 有朋自远方来，不亦乐乎
  还可以在这些地方找到我:
- 邮箱：reardonyang@gmail.com 豆瓣：查看详情 Github： 查看详情  "/>
+ 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”"/>
 
 
 
 <meta itemprop="name" content="联系">
-<meta itemprop="description" content="🐾 茶藍即菘藍，插根活。蓼藍、馬藍、吳藍等皆撒子生。近又出蓼藍小葉者俗名莧藍，種更佳。
+<meta itemprop="description" content="😃 有朋自远方来，不亦乐乎
  还可以在这些地方找到我:
- 邮箱：reardonyang@gmail.com 豆瓣：查看详情 Github： 查看详情  ">
+ 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”">
 
-<meta itemprop="wordCount" content="7"><meta itemprop="image" content="https://example.com/images/share.png"/>
+<meta itemprop="wordCount" content="9"><meta itemprop="image" content="https://reardonyang.com/images/share.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -238,14 +238,17 @@
   <main>
 
 <content>
-  <p><strong>🐾  茶藍即菘藍，插根活。蓼藍、馬藍、吳藍等皆撒子生。近又出蓼藍小葉者俗名莧藍，種更佳。</strong></p>
+  <p><strong>😃  有朋自远方来，不亦乐乎</strong></p>
 <hr>
 <p>还可以在这些地方找到我:</p>
 <ul>
-<li>邮箱：reardonyang@gmail.com</li>
 <li>豆瓣：<a href="https://www.douban.com/people/57644512/">查看详情</a></li>
 <li>Github： <a href="https://github.com/ReardonYang">查看详情</a></li>
+<li>地址：广东省深圳市南山区</li>
+<li>邮箱：reardonyang@gmail.com</li>
 </ul>
+<hr>
+<p>“永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”</p>
 
 </content>
 <p>
@@ -253,7 +256,7 @@
 </p>
 
   </main>
-  <footer>Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>
+  <footer>
 </footer>
 
     
