--- a/tool/index.html
+++ b/tool/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="zh-CN">
 
 <head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="https://example.com/images/favicon.png" />
+<link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>工具 | 杨靖武 ʕ•ᴥ•ʔ</title>
 <meta name="title" content="工具" />
 <meta name="description" content="🛠 能工摹其形，巧匠摄其魂
@@ -19,15 +19,15 @@
  日常使用工具
  比特币 Bitcoin：非主权货币；查看详情 Git：版本管理工具；查看详情 Syncthing：P2P同步工具；查看详情 ExpressVPN：科学上网工具；查看详情 蓝灯 Lantern：科学上网工具；查看详情 中本聪研究所：传播中本聪思想；查看详情 Infinite Market Cap：全球资产排名工具；查看详情 维基文库：自由的图书馆；查看详情 Ledger：安全的加密货币/资产硬件钱包；查看详情   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://example.com/tool/" /><meta property="og:image" content="https://example.com/images/share.png"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://reardonyang.com/tool/" /><meta property="og:image" content="https://reardonyang.com/images/share.png"/><meta property="article:section" content="" />
 
-<meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear" />
+<meta property="og:site_name" content="Huge ʕ•ᴥ•ʔ Bear" />
 
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://example.com/images/share.png"/>
+<meta name="twitter:image" content="https://reardonyang.com/images/share.png"/>
 
 <meta name="twitter:title" content="工具"/>
 <meta name="twitter:description" content="🛠 能工摹其形，巧匠摄其魂
@@ -41,7 +41,7 @@
  日常使用工具
  比特币 Bitcoin：非主权货币；查看详情 Git：版本管理工具；查看详情 Syncthing：P2P同步工具；查看详情 ExpressVPN：科学上网工具；查看详情 蓝灯 Lantern：科学上网工具；查看详情 中本聪研究所：传播中本聪思想；查看详情 Infinite Market Cap：全球资产排名工具；查看详情 维基文库：自由的图书馆；查看详情 Ledger：安全的加密货币/资产硬件钱包；查看详情   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”">
 
-<meta itemprop="wordCount" content="17"><meta itemprop="image" content="https://example.com/images/share.png"/>
+<meta itemprop="wordCount" content="17"><meta itemprop="image" content="https://reardonyang.com/images/share.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -261,7 +261,7 @@
 </p>
 
   </main>
-  <footer>Made with <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a>
+  <footer>
 </footer>
 
     
