Upload history articles and adjust style

--- a/tool/index.html
+++ b/tool/index.html
@@ -8,14 +8,14 @@
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>工具 | 杨靖武 ʕ•ᴥ•ʔ</title>
 <meta name="title" content="工具" />
-<meta name="description" content="🛠 能工摹其形，巧匠摄其魂
+<meta name="description" content="🎸 工欲善其事必先利其器
  日常使用工具
  比特币 Bitcoin：非主权货币；查看详情 Git：版本管理工具；查看详情 Syncthing：P2P同步工具；查看详情 ExpressVPN：科学上网工具；查看详情 蓝灯 Lantern：科学上网工具；查看详情 中本聪研究所：传播中本聪思想；查看详情 Infinite Market Cap：全球资产排名工具；查看详情 维基文库：自由的图书馆；查看详情 Ledger：安全的加密货币/资产硬件钱包；查看详情   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="工具" />
-<meta property="og:description" content="🛠 能工摹其形，巧匠摄其魂
+<meta property="og:description" content="🎸 工欲善其事必先利其器
  日常使用工具
  比特币 Bitcoin：非主权货币；查看详情 Git：版本管理工具；查看详情 Syncthing：P2P同步工具；查看详情 ExpressVPN：科学上网工具；查看详情 蓝灯 Lantern：科学上网工具；查看详情 中本聪研究所：传播中本聪思想；查看详情 Infinite Market Cap：全球资产排名工具；查看详情 维基文库：自由的图书馆；查看详情 Ledger：安全的加密货币/资产硬件钱包；查看详情   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
 <meta property="og:type" content="article" />
@@ -30,14 +30,14 @@
 <meta name="twitter:image" content="https://reardonyang.com/images/share.png"/>
 
 <meta name="twitter:title" content="工具"/>
-<meta name="twitter:description" content="🛠 能工摹其形，巧匠摄其魂
+<meta name="twitter:description" content="🎸 工欲善其事必先利其器
  日常使用工具
  比特币 Bitcoin：非主权货币；查看详情 Git：版本管理工具；查看详情 Syncthing：P2P同步工具；查看详情 ExpressVPN：科学上网工具；查看详情 蓝灯 Lantern：科学上网工具；查看详情 中本聪研究所：传播中本聪思想；查看详情 Infinite Market Cap：全球资产排名工具；查看详情 维基文库：自由的图书馆；查看详情 Ledger：安全的加密货币/资产硬件钱包；查看详情   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”"/>
 
 
 
 <meta itemprop="name" content="工具">
-<meta itemprop="description" content="🛠 能工摹其形，巧匠摄其魂
+<meta itemprop="description" content="🎸 工欲善其事必先利其器
  日常使用工具
  比特币 Bitcoin：非主权货币；查看详情 Git：版本管理工具；查看详情 Syncthing：P2P同步工具；查看详情 ExpressVPN：科学上网工具；查看详情 蓝灯 Lantern：科学上网工具；查看详情 中本聪研究所：传播中本聪思想；查看详情 Infinite Market Cap：全球资产排名工具；查看详情 维基文库：自由的图书馆；查看详情 Ledger：安全的加密货币/资产硬件钱包；查看详情   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”">
 
@@ -224,21 +224,21 @@
   <header><a href="/" class="title">
   <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
 </a>
-<nav><a href="/">Home</a>
+<nav><a href="/">首页</a>
 
 <a href="/tool/">工具</a>
 
 <a href="/contact/">联系</a>
 
 
-<a href="/blog">Blog</a>
+<a href="/blog">文章</a>
 
 </nav>
 </header>
   <main>
 
 <content>
-  <p><strong>🛠 能工摹其形，巧匠摄其魂</strong></p>
+  <p><strong>🎸 工欲善其事必先利其器</strong></p>
 <hr>
 <p><strong>日常使用工具</strong></p>
 <ul>
@@ -261,7 +261,7 @@
 </p>
 
   </main>
-  <footer>
+  <footer>Powered By <a href="https://reardonyang.com/">💟杨靖武</a>
 </footer>
 
     
