--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="Hugo &#43; Bear = :heart:" />
-<meta name="keywords" content="markdown,syntax," />
+<meta name="keywords" content="世界旅行,生活点滴," />
 
 
 <meta property="og:title" content="404 Page not found" />
@@ -211,14 +211,14 @@
   <header><a href="/" class="title">
   <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
 </a>
-<nav><a href="/">Home</a>
+<nav><a href="/">首页</a>
 
 <a href="/tool/">工具</a>
 
 <a href="/contact/">联系</a>
 
 
-<a href="/blog">Blog</a>
+<a href="/blog">文章</a>
 
 </nav>
 </header>
@@ -227,7 +227,7 @@
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
 
   </main>
-  <footer>
+  <footer>Powered By <a href="https://reardonyang.com/">💟杨靖武</a>
 </footer>
 
     
