--- a/contact/index.html
+++ b/contact/index.html
@@ -224,14 +224,14 @@
   <header><a href="/" class="title">
   <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
 </a>
-<nav><a href="/">Home</a>
+<nav><a href="/">首页</a>
 
 <a href="/tool/">工具</a>
 
 <a href="/contact/">联系</a>
 
 
-<a href="/blog">Blog</a>
+<a href="/blog">文章</a>
 
 </nav>
 </header>
@@ -256,7 +256,7 @@
 </p>
 
   </main>
-  <footer>
+  <footer>Powered By <a href="https://reardonyang.com/">💟杨靖武</a>
 </footer>
 
     
