Fix silent and cutdown pages

--- a/安静/index.html
+++ b/安静/index.html
@@ -264,7 +264,7 @@
 <p>此時此地。你相信什麼，不相信什麼；你接受什麼，不接受什麼；你表現什麼，不表現什麼⋯⋯</p>
 <p>這些答案交織，就是你此時此地價值觀，價值觀是動因，是潮水，直接推動事情發展，流變，形成際遇。</p>
 <p>一年多前看王陽明講知行合一（錢穆《陽明學述要》）：“知是行的主義，行是知的功夫。知是行之始，行是知之成。若會得時，只說一個知，已自有行在；只說一個行，已自有知在。”就是這個道理。</p>
-<p><img src="/images/silent.jpg" alt="break"></p>
+<p><img src="/images/silent.jpg" alt="silent"></p>
 <hr>
 
 </content>
