--- a/断章/index.html
+++ b/断章/index.html
@@ -254,7 +254,7 @@
   <p>我开车，坐船，又来到这儿，原先这里没有道路可寻，郁郁葱葱拥着水波荡漾。现在岸边孤零零立着双车道柏油路，我知道，一切都不一样了，他摆摆手，示意我们没有时间了，于是我们继续向前，不再停留。头顶阴云密布，阳光从云层中打下道道光柱，也将云层映得火烧一般。</p>
 <p>路尽头渐渐能看到火光，像一团被拨散的蛋黄，四周依然是死一般安静，温度变高了，我们不得不脱下长衫，扔在路边。</p>
 <p>我和他都已孑然一身。</p>
-<p><img src="/images/cutdown.png" alt="break"></p>
+<p><img src="/images/cutdown.png" alt="cutdown"></p>
 <hr>
 
 </content>
