--- a/404.html
+++ b/404.html
@@ -209,7 +209,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
