--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>杨靖武 ʕ•ᴥ•ʔ</title>
-<meta name="title" content="杨靖武 ʕ•ᴥ•ʔ" />
+<title>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
+<meta name="title" content="杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一" />
 <meta name="description" content="Hugo &#43; Bear = :heart:" />
 <meta name="keywords" content="世界旅行,生活点滴," />
 
@@ -33,7 +33,7 @@
 <meta itemprop="description" content="Hugo &#43; Bear = :heart:">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://reardonyang.com/index.xml" title="杨靖武 ʕ•ᴥ•ʔ" />
+  <link rel="alternate" type="application/rss+xml" href="https://reardonyang.com/index.xml" title="杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一" />
   <style>
   body {
     font-family: Verdana, sans-serif;
@@ -211,7 +211,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
