--- a/tool/index.html
+++ b/tool/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>工具 | 杨靖武 ʕ•ᴥ•ʔ</title>
+<title>工具 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
 <meta name="title" content="工具" />
 <meta name="description" content="🎸 工欲善其事必先利其器
  日常使用工具
@@ -222,7 +222,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
