--- a/北国/index.html
+++ b/北国/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>北国 | 杨靖武 ʕ•ᴥ•ʔ</title>
+<title>北国 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
 <meta name="title" content="北国" />
 <meta name="description" content="五点多醒了，心里想着些事，终究睡不着。
 石家庄，还真是让人很不习惯，食物，天气，城市面貌，没有一处让人舒服。满大街东北菜、沧州菜、驴肉火烧，难以亲近。天气灰蒙蒙，从九月头待到九月下旬，总觉得现有衣物不合适，没法减也没法添。出小区，往左，往右，往前，往后，走不多久就在修路，路面不平。
@@ -250,7 +250,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
