--- a/年关/index.html
+++ b/年关/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>年关 | 杨靖武 ʕ•ᴥ•ʔ</title>
+<title>年关 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
 <meta name="title" content="年关" />
 <meta name="description" content="夜幕降临了，往家里搬东西，补“缺货”，对联，鞭炮，水果，浆糊，鸡爪，锅碗瓢盆……
 亲戚都回来了，能闻到空气中牛粪，鸡屎，火药混合的气味。
@@ -234,7 +234,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
