--- a/断章/index.html
+++ b/断章/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>断章 | 杨靖武 ʕ•ᴥ•ʔ</title>
+<title>断章 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
 <meta name="title" content="断章" />
 <meta name="description" content="我开车，坐船，又来到这儿，原先这里没有道路可寻，郁郁葱葱拥着水波荡漾。现在岸边孤零零立着双车道柏油路，我知道，一切都不一样了，他摆摆手，示意我们没有时间了，于是我们继续向前，不再停留。头顶阴云密布，阳光从云层中打下道道光柱，也将云层映得火烧一般。
 路尽头渐渐能看到火光，像一团被拨散的蛋黄，四周依然是死一般安静，温度变高了，我们不得不脱下长衫，扔在路边。
@@ -226,7 +226,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
