--- a/永安/index.html
+++ b/永安/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>永安 | 杨靖武 ʕ•ᴥ•ʔ</title>
+<title>永安 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
 <meta name="title" content="永安" />
 <meta name="description" content="经历了人生的诡谲沉浮，静默无声后，老向依然宛若孩童，处子，刺客。好像这荒唐，潦倒，破碎，逝去的前半生和他竟无甚关系，没有给他留下丝毫伤痕。
 他像一把刚出鞘的刀，寒气逼人，削铁如泥。他比以往任何时候都更相信自己。
@@ -226,7 +226,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
