--- a/香港/index.html
+++ b/香港/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>香港 | 杨靖武 ʕ•ᴥ•ʔ</title>
+<title>香港 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
 <meta name="title" content="香港" />
 <meta name="description" content="昨天带老妈去了一趟香港，从福田口岸过关，一天的来回。时间紧凑，行程匆忙，再加上这段时间来，香港局势动荡，心有忌惮，总之是没能尽兴。
 也是偶然，来之前，恰好看了“东京物语”。剧中，刚到东京的时候，妈妈说：“原来东京这么近。”决定离开东京的时候，妈妈说：“东京真的太远了。”
@@ -262,7 +262,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ʕ•ᴥ•ʔ</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
