--- a/contact/index.html
+++ b/contact/index.html
@@ -6,18 +6,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>联系 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
+<title>联系 | 杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
 <meta name="title" content="联系" />
 <meta name="description" content="😃 有朋自远方来，不亦乐乎
  还可以在这些地方找到我:
- 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”" />
+ 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com  喜欢我的文字，可以给我打赏：
+ 比特币：321sCmLJoqDCARmngJqhPiomBbs2BBxuXy 狗狗币：DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="联系" />
 <meta property="og:description" content="😃 有朋自远方来，不亦乐乎
  还可以在这些地方找到我:
- 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”" />
+ 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com  喜欢我的文字，可以给我打赏：
+ 比特币：321sCmLJoqDCARmngJqhPiomBbs2BBxuXy 狗狗币：DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://reardonyang.com/contact/" /><meta property="og:image" content="https://reardonyang.com/images/share.png"/><meta property="article:section" content="" />
 
@@ -32,16 +34,18 @@
 <meta name="twitter:title" content="联系"/>
 <meta name="twitter:description" content="😃 有朋自远方来，不亦乐乎
  还可以在这些地方找到我:
- 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”"/>
+ 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com  喜欢我的文字，可以给我打赏：
+ 比特币：321sCmLJoqDCARmngJqhPiomBbs2BBxuXy 狗狗币：DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”"/>
 
 
 
 <meta itemprop="name" content="联系">
 <meta itemprop="description" content="😃 有朋自远方来，不亦乐乎
  还可以在这些地方找到我:
- 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”">
+ 豆瓣：查看详情 Github： 查看详情 地址：广东省深圳市南山区 邮箱：reardonyang@gmail.com  喜欢我的文字，可以给我打赏：
+ 比特币：321sCmLJoqDCARmngJqhPiomBbs2BBxuXy 狗狗币：DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv   “永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”">
 
-<meta itemprop="wordCount" content="9"><meta itemprop="image" content="https://reardonyang.com/images/share.png"/>
+<meta itemprop="wordCount" content="12"><meta itemprop="image" content="https://reardonyang.com/images/share.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -222,7 +226,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -234,6 +238,17 @@
 <a href="/blog">文章</a>
 
 </nav>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-NSSE83FXH4', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 </header>
   <main>
 
@@ -246,6 +261,12 @@
 <li>Github： <a href="https://github.com/ReardonYang">查看详情</a></li>
 <li>地址：广东省深圳市南山区</li>
 <li>邮箱：reardonyang@gmail.com</li>
+</ul>
+<p><img src="/images/self.jpg" alt="self"></p>
+<p>喜欢我的文字，可以给我打赏：</p>
+<ul>
+<li>比特币：321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</li>
+<li>狗狗币：DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</li>
 </ul>
 <hr>
 <p>“永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”</p>
