--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
-<meta name="title" content="杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一" />
+<title>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
+<meta name="title" content="杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一" />
 <meta name="description" content="Hugo &#43; Bear = :heart:" />
 <meta name="keywords" content="世界旅行,生活点滴," />
 
@@ -33,7 +33,7 @@
 <meta itemprop="description" content="Hugo &#43; Bear = :heart:">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://reardonyang.com/index.xml" title="杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一" />
+  <link rel="alternate" type="application/rss+xml" href="https://reardonyang.com/index.xml" title="杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一" />
   <style>
   body {
     font-family: Verdana, sans-serif;
@@ -211,7 +211,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -223,6 +223,17 @@
 <a href="/blog">文章</a>
 
 </nav>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-NSSE83FXH4', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 </header>
   <main>
 <p>💖 我叫杨靖武，<strong>比特币信徒、自由主义者</strong>，长居深圳。</p>
@@ -231,15 +242,9 @@
 <hr>
 <p>近年来，我的工作重心是：</p>
 <ul>
-<li>深入理解比特币，为其在全世界的推广使用做贡献，探索区块链技术在政务行业的应用</li>
+<li>深入理解比特币，为其在全世界的推广使用做贡献</li>
+<li>探索区块链技术在政务行业的应用</li>
 <li>成为自由职业者</li>
-</ul>
-<p><strong>你可以在这里找到我的<a href="https://reardonyang.com/contact">📱 联系方式</a></strong></p>
-<hr>
-<p>喜欢我的文字，可以给我打赏：</p>
-<ul>
-<li>比特币：321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</li>
-<li>狗狗币：DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</li>
 </ul>
 
 
