--- a/更少/index.html
+++ b/更少/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>更少 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
+<title>更少 | 杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
 <meta name="title" content="更少" />
 <meta name="description" content="今天得闲，将青年时期爱的一些人物翻出来看，仍是喜欢，但仿佛是上个世纪事了。
 工作后这两年，兴趣变化太大，文史的东西看得少了，工具类的东西看得多了。
@@ -262,7 +262,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -274,6 +274,17 @@
 <a href="/blog">文章</a>
 
 </nav>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-NSSE83FXH4', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 </header>
   <main>
 
