--- a/安静/index.html
+++ b/安静/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>安静 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
+<title>安静 | 杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
 <meta name="title" content="安静" />
 <meta name="description" content="我當然在這個社會也各種不適應，卻也平靜，接受。
 我意識到很多事情發生和人在特定時期價值觀有關。價值觀當然不是個穩定，一成不變東西，事物變化發展，人被事物裹挾，价值二一添作五。
@@ -234,7 +234,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -246,6 +246,17 @@
 <a href="/blog">文章</a>
 
 </nav>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-NSSE83FXH4', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 </header>
   <main>
 
