--- a/曼谷/index.html
+++ b/曼谷/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>曼谷 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
+<title>曼谷 | 杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
 <meta name="title" content="曼谷" />
 <meta name="description" content=" 城市是众多事物的一个整体：记忆的整体，欲望的整体，一种言语的符号的整体&hellip;&hellip;城市就像一块海绵，吸汲着这些不断涌流的记忆的潮水，并且随之膨胀着。——看不见的城市（Italo Calvino）
  这个中秋，第四次到曼谷。
@@ -250,7 +250,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -262,6 +262,17 @@
 <a href="/blog">文章</a>
 
 </nav>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-NSSE83FXH4', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 </header>
   <main>
 
