--- a/美好/index.html
+++ b/美好/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>美好 | 杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</title>
+<title>美好 | 杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
 <meta name="title" content="美好" />
 <meta name="description" content="无法被完成的，往往是美好的。
 比如年少时借的未及看完的书，不再重逢的老友，不够完美的旅程，不可收回的话，不能被完成的承诺。
@@ -234,7 +234,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ξ(ง₿ ᴥ ₿)งξ▄︻┻┳═一</h2>
+  <h2>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -246,6 +246,17 @@
 <a href="/blog">文章</a>
 
 </nav>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-NSSE83FXH4', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 </header>
   <main>
 
