Add google analytics

--- a/404.html
+++ b/404.html
@@ -222,17 +222,19 @@
 
 </nav>
 
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'G-NSSE83FXH4', 'auto');
-	
-	ga('send', 'pageview');
-}
+# Reardon insert from here
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NSSE83FXH4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NSSE83FXH4');
 </script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
-</header>
+
+# Reardon insert end here</header>
   <main>
 <h1>404</h1>
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
