--- a/index.html
+++ b/index.html
@@ -224,17 +224,19 @@
 
 </nav>
 
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'G-NSSE83FXH4', 'auto');
-	
-	ga('send', 'pageview');
-}
+# Reardon insert from here
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NSSE83FXH4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NSSE83FXH4');
 </script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
-</header>
+
+# Reardon insert end here</header>
   <main>
 <p>💖 我叫杨靖武，<strong>比特币信徒、自由主义者</strong>，长居深圳。</p>
 <p>长期从事政务信息化、安防行业。</p>
