--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
 <meta name="title" content="杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一" />
 <meta name="description" content="Hugo &#43; Bear = :heart:" />
-<meta name="keywords" content="世界旅行,生活点滴," />
+<meta name="keywords" content="世界旅行,操作手册,生活点滴," />
 
 
 <meta property="og:title" content="" />
@@ -224,8 +224,6 @@
 
 </nav>
 
-# Reardon insert from here
-
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NSSE83FXH4"></script>
 <script>
@@ -234,9 +232,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-NSSE83FXH4');
-</script>
-
-# Reardon insert end here</header>
+</script></header>
   <main>
 <p>💖 我叫杨靖武，<strong>比特币信徒、自由主义者</strong>，长居深圳。</p>
 <p>长期从事政务信息化、安防行业。</p>
