--- a/更少/index.html
+++ b/更少/index.html
@@ -275,8 +275,6 @@
 
 </nav>
 
-# Reardon insert from here
-
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NSSE83FXH4"></script>
 <script>
@@ -285,9 +283,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-NSSE83FXH4');
-</script>
-
-# Reardon insert end here</header>
+</script></header>
   <main>
 
 <h1>更少</h1>
