--- a/tool/index.html
+++ b/tool/index.html
@@ -235,8 +235,6 @@
 
 </nav>
 
-# Reardon insert from here
-
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NSSE83FXH4"></script>
 <script>
@@ -245,9 +243,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-NSSE83FXH4');
-</script>
-
-# Reardon insert end here</header>
+</script></header>
   <main>
 
 <content>
