--- a/北国/index.html
+++ b/北国/index.html
@@ -263,8 +263,6 @@
 
 </nav>
 
-# Reardon insert from here
-
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NSSE83FXH4"></script>
 <script>
@@ -273,9 +271,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-NSSE83FXH4');
-</script>
-
-# Reardon insert end here</header>
+</script></header>
   <main>
 
 <h1>北国</h1>
