--- a/断章/index.html
+++ b/断章/index.html
@@ -239,8 +239,6 @@
 
 </nav>
 
-# Reardon insert from here
-
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NSSE83FXH4"></script>
 <script>
@@ -249,9 +247,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-NSSE83FXH4');
-</script>
-
-# Reardon insert end here</header>
+</script></header>
   <main>
 
 <h1>断章</h1>
