--- a/别tm去炒币了手把手教你发行自己的虚拟币/index.html
+++ b/别tm去炒币了手把手教你发行自己的虚拟币/index.html
@@ -9,7 +9,7 @@
 <title>别TM去炒币了，手把手教你发行自己的虚拟币 | 杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
 <meta name="title" content="别TM去炒币了，手把手教你发行自己的虚拟币" />
 <meta name="description" content="本教程基于以太坊生态ERC-20协议，不需要任何编程技术。 本教程仅适用于计算机基础较薄弱的朋友，熟手请绕道。 文中所有的链接处，请右键单击，选择在”新的窗口打开”   本文所述的，发行自己的虚拟币/虚拟资产/私人货币/ERC-20代币（以下统称为“代币”），需要以下几个步骤：
- 准备一台可上网的电脑； 准备好自己所要发行代币的属性信息； 安装并打开谷歌浏览器； 在谷歌浏览器中，安装并配置MetaMask钱包（以下简称”小狐狸钱包“）； 获取以太坊Ropsten测试网络ETH代币； 使用一键发币工具，发行自己的代币； 将发行好的代币添加到自己的钱包； 完成；  以下为详细步骤：
+ 准备一台可上网的电脑； 准备好自己所要发行代币的属性信息； 安装并打开谷歌浏览器； 在谷歌浏览器中，安装并配置MetaMask钱包（以下简称”小狐狸钱包“）； 获取以太坊Ropsten测试网络ETH代币； 使用一键发币工具`，发行自己的代币； 将发行好的代币添加到自己的钱包； 完成；  以下为详细步骤：
  1.准备一台可上网的电脑； 首先准备一台可上网的电脑，发币的过程在电脑上完成，Windows电脑和苹果电脑均可。
  2.准备好自己所要发行代币的属性信息； 请先想好自己所要发行的代币的属性信息，然后写在纸上，方便后续直接填写；
 属性信息包括：
@@ -35,7 +35,7 @@
 
 <meta property="og:title" content="别TM去炒币了，手把手教你发行自己的虚拟币" />
 <meta property="og:description" content="本教程基于以太坊生态ERC-20协议，不需要任何编程技术。 本教程仅适用于计算机基础较薄弱的朋友，熟手请绕道。 文中所有的链接处，请右键单击，选择在”新的窗口打开”   本文所述的，发行自己的虚拟币/虚拟资产/私人货币/ERC-20代币（以下统称为“代币”），需要以下几个步骤：
- 准备一台可上网的电脑； 准备好自己所要发行代币的属性信息； 安装并打开谷歌浏览器； 在谷歌浏览器中，安装并配置MetaMask钱包（以下简称”小狐狸钱包“）； 获取以太坊Ropsten测试网络ETH代币； 使用一键发币工具，发行自己的代币； 将发行好的代币添加到自己的钱包； 完成；  以下为详细步骤：
+ 准备一台可上网的电脑； 准备好自己所要发行代币的属性信息； 安装并打开谷歌浏览器； 在谷歌浏览器中，安装并配置MetaMask钱包（以下简称”小狐狸钱包“）； 获取以太坊Ropsten测试网络ETH代币； 使用一键发币工具`，发行自己的代币； 将发行好的代币添加到自己的钱包； 完成；  以下为详细步骤：
  1.准备一台可上网的电脑； 首先准备一台可上网的电脑，发币的过程在电脑上完成，Windows电脑和苹果电脑均可。
  2.准备好自己所要发行代币的属性信息； 请先想好自己所要发行的代币的属性信息，然后写在纸上，方便后续直接填写；
 属性信息包括：
@@ -69,7 +69,7 @@
 
 <meta name="twitter:title" content="别TM去炒币了，手把手教你发行自己的虚拟币"/>
 <meta name="twitter:description" content="本教程基于以太坊生态ERC-20协议，不需要任何编程技术。 本教程仅适用于计算机基础较薄弱的朋友，熟手请绕道。 文中所有的链接处，请右键单击，选择在”新的窗口打开”   本文所述的，发行自己的虚拟币/虚拟资产/私人货币/ERC-20代币（以下统称为“代币”），需要以下几个步骤：
- 准备一台可上网的电脑； 准备好自己所要发行代币的属性信息； 安装并打开谷歌浏览器； 在谷歌浏览器中，安装并配置MetaMask钱包（以下简称”小狐狸钱包“）； 获取以太坊Ropsten测试网络ETH代币； 使用一键发币工具，发行自己的代币； 将发行好的代币添加到自己的钱包； 完成；  以下为详细步骤：
+ 准备一台可上网的电脑； 准备好自己所要发行代币的属性信息； 安装并打开谷歌浏览器； 在谷歌浏览器中，安装并配置MetaMask钱包（以下简称”小狐狸钱包“）； 获取以太坊Ropsten测试网络ETH代币； 使用一键发币工具`，发行自己的代币； 将发行好的代币添加到自己的钱包； 完成；  以下为详细步骤：
  1.准备一台可上网的电脑； 首先准备一台可上网的电脑，发币的过程在电脑上完成，Windows电脑和苹果电脑均可。
  2.准备好自己所要发行代币的属性信息； 请先想好自己所要发行的代币的属性信息，然后写在纸上，方便后续直接填写；
 属性信息包括：
@@ -95,7 +95,7 @@
 
 <meta itemprop="name" content="别TM去炒币了，手把手教你发行自己的虚拟币">
 <meta itemprop="description" content="本教程基于以太坊生态ERC-20协议，不需要任何编程技术。 本教程仅适用于计算机基础较薄弱的朋友，熟手请绕道。 文中所有的链接处，请右键单击，选择在”新的窗口打开”   本文所述的，发行自己的虚拟币/虚拟资产/私人货币/ERC-20代币（以下统称为“代币”），需要以下几个步骤：
- 准备一台可上网的电脑； 准备好自己所要发行代币的属性信息； 安装并打开谷歌浏览器； 在谷歌浏览器中，安装并配置MetaMask钱包（以下简称”小狐狸钱包“）； 获取以太坊Ropsten测试网络ETH代币； 使用一键发币工具，发行自己的代币； 将发行好的代币添加到自己的钱包； 完成；  以下为详细步骤：
+ 准备一台可上网的电脑； 准备好自己所要发行代币的属性信息； 安装并打开谷歌浏览器； 在谷歌浏览器中，安装并配置MetaMask钱包（以下简称”小狐狸钱包“）； 获取以太坊Ropsten测试网络ETH代币； 使用一键发币工具`，发行自己的代币； 将发行好的代币添加到自己的钱包； 完成；  以下为详细步骤：
  1.准备一台可上网的电脑； 首先准备一台可上网的电脑，发币的过程在电脑上完成，Windows电脑和苹果电脑均可。
  2.准备好自己所要发行代币的属性信息； 请先想好自己所要发行的代币的属性信息，然后写在纸上，方便后续直接填写；
 属性信息包括：
@@ -345,7 +345,7 @@
 <li>安装并打开谷歌浏览器；</li>
 <li>在谷歌浏览器中，安装并配置<strong>MetaMask钱包（以下简称”小狐狸钱包“）</strong>；</li>
 <li>获取以太坊<strong>Ropsten测试网络</strong>ETH代币；</li>
-<li>使用<code>一键发币工具</code>，发行自己的代币；</li>
+<li>使用<a href="https://vittominacori.github.io/erc20-generator/create-token/"><strong>一键发币工具</strong></a>`，发行自己的代币；</li>
 <li>将发行好的代币<strong>添加</strong>到自己的钱包；</li>
 <li><strong>完成</strong>；</li>
 </ol>
@@ -384,9 +384,9 @@
 <p><img src="/images/create-your-own-token/faucet.png" alt="faucet"></p>
 <p><strong>注：这里的ETH仅供测试使用，无法提取到交易所进行交易</strong></p>
 <hr>
-<h2 id="6-使用一键发币工具发行自己的虚拟币">6. 使用<code>一键发币工具</code>，发行自己的虚拟币；</h2>
+<h2 id="6-使用一键发币工具httpsvittominacorigithubioerc20-generatorcreate-token发行自己的虚拟币">6. 使用<a href="https://vittominacori.github.io/erc20-generator/create-token/"><strong>一键发币工具</strong></a>，发行自己的虚拟币；</h2>
 <p>完成以上的所有步骤之后，就可以正式开始发行代币了。</p>
-<p>打开<code>一键发币工具</code>：<a href="https://vittominacori.github.io/erc20-generator/create-token/">链接地址</a></p>
+<p>打开<strong>一键发币工具</strong>：<a href="https://vittominacori.github.io/erc20-generator/create-token/">链接地址</a></p>
 <p>在下图所示<strong>左侧</strong>界面中，依次填写：</p>
 <ul>
 <li><strong>代币名称</strong>(Token Name)：如Bitcoin, Citcoin, renminbi.（使用英文字符）</li>
