--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="Hugo &#43; Bear = :heart:" />
-<meta name="keywords" content="世界旅行,操作手册,生活点滴," />
+<meta name="keywords" content="世界旅行,大话比特币,操作手册,生活点滴," />
 
 
 <meta property="og:title" content="404 Page not found" />
