--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
-<meta name="title" content="杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一" />
+<title>杨靖武</title>
+<meta name="title" content="杨靖武" />
 <meta name="description" content="Hugo &#43; Bear = :heart:" />
 <meta name="keywords" content="世界旅行,大话比特币,操作手册,生活点滴," />
 
@@ -33,7 +33,7 @@
 <meta itemprop="description" content="Hugo &#43; Bear = :heart:">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://reardonyang.com/index.xml" title="杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一" />
+  <link rel="alternate" type="application/rss+xml" href="https://reardonyang.com/index.xml" title="杨靖武" />
   <style>
   body {
     font-family: Verdana, sans-serif;
@@ -211,7 +211,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</h2>
+  <h2>杨靖武</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -221,6 +221,7 @@
 
 
 <a href="/blog">文章</a>
+
 
 </nav>
 
@@ -234,15 +235,13 @@
   gtag('config', 'G-NSSE83FXH4');
 </script></header>
   <main>
-<p>💖 我叫杨靖武，<strong>比特币信徒、自由主义者</strong>，长居深圳。</p>
-<p>长期从事政务信息化、安防行业。</p>
+<p>💖 我叫杨靖武，<strong>比特币信徒、自由主义者</strong>。</p>
 <p>这里会记录一些日常琐碎，经验心得，以及转载一些文章。你还可以在<a href="https://www.douban.com/people/57644512/">🍭 豆瓣</a>找到我。</p>
 <hr>
 <p>近年来，我的工作重心是：</p>
 <ul>
 <li>深入理解比特币，为其在全世界的推广使用做贡献</li>
 <li>探索区块链技术在政务行业的应用</li>
-<li>成为自由职业者</li>
 </ul>
 
 
