--- a/春雨/index.html
+++ b/春雨/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>春雨 | 杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
+<title>春雨 | 杨靖武</title>
 <meta name="title" content="春雨" />
 <meta name="description" content="天虽然阴沉着，但是空气闻起来爽快，利索。
 没有预兆的，落起了雨，一滴两滴，然后便淅淅沥沥下了起来。不知是春雨，还是夏雨，这个时节，很容易使人有天荒地老之感。
@@ -258,7 +258,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</h2>
+  <h2>杨靖武</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -268,6 +268,7 @@
 
 
 <a href="/blog">文章</a>
+
 
 </nav>
 
