--- a/404.html
+++ b/404.html
@@ -209,7 +209,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</h2>
+  <h2>杨靖武</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -219,6 +219,7 @@
 
 
 <a href="/blog">文章</a>
+
 
 </nav>
 
