--- a/膏肓/index.html
+++ b/膏肓/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>膏肓 | 杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</title>
+<title>膏肓 | 杨靖武</title>
 <meta name="title" content="膏肓" />
 <meta name="description" content="此人常自比为尝百草之神龙先生，误食多种剧毒物质，按医师所言，余日不过半旬，苟延残喘，行尸走肉。其常日所言所记亦不过累述己身症候。特摘录一二如下：
  症状壹——呓语：  终日重复短句二三，句子多谐谑，粗俗。出言无状，言辞粗鄙难闻。
@@ -234,7 +234,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武 ξ(ง₿ ᴥ ₿)ง▄︻┻┳═一</h2>
+  <h2>杨靖武</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -244,6 +244,7 @@
 
 
 <a href="/blog">文章</a>
+
 
 </nav>
 
