--- a/404.html
+++ b/404.html
@@ -8,28 +8,28 @@
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
-<meta name="description" content="Hugo &#43; Bear = :heart:" />
+<meta name="description" content="杨靖武" />
 <meta name="keywords" content="世界旅行,大话比特币,操作手册,生活点滴," />
 
 
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Hugo &#43; Bear = :heart:" />
+<meta property="og:description" content="杨靖武" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://reardonyang.com/404.html" /><meta property="og:image" content="https://reardonyang.com/images/share.png"/><meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear" />
+<meta property="og:url" content="https://reardonyang.com/404.html" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="og:site_name" content="杨靖武" />
 
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://reardonyang.com/images/share.png"/>
+<meta name="twitter:image" content="https://reardonyang.com/images/share.jpg"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Hugo &#43; Bear = :heart:"/>
+<meta name="twitter:description" content="杨靖武"/>
 
 
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Hugo &#43; Bear = :heart:">
+<meta itemprop="description" content="杨靖武">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
@@ -215,11 +215,8 @@
 
 <a href="/tool/">工具</a>
 
-<a href="/contact/">联系</a>
-
 
 <a href="/blog">文章</a>
-
 
 </nav>
 
@@ -237,7 +234,7 @@
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
 
   </main>
-  <footer>Powered By <a href="https://reardonyang.com/">💟杨靖武</a>
+  <footer>Powered By <a href="https://reardonyang.com/">💖ReardonYang</a>
 </footer>
 
     
