--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>杨靖武</title>
 <meta name="title" content="杨靖武" />
-<meta name="description" content="Hugo &#43; Bear = :heart:" />
+<meta name="description" content="杨靖武" />
 <meta name="keywords" content="世界旅行,大话比特币,操作手册,生活点滴," />
 
 
 <meta property="og:title" content="" />
-<meta property="og:description" content="Hugo &#43; Bear = :heart:" />
+<meta property="og:description" content="杨靖武" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://reardonyang.com/" /><meta property="og:image" content="https://reardonyang.com/images/share.png"/><meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear" />
+<meta property="og:url" content="https://reardonyang.com/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="og:site_name" content="杨靖武" />
 
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://reardonyang.com/images/share.png"/>
+<meta name="twitter:image" content="https://reardonyang.com/images/share.jpg"/>
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Hugo &#43; Bear = :heart:"/>
+<meta name="twitter:description" content="杨靖武"/>
 
 
 
 <meta itemprop="name" content="">
-<meta itemprop="description" content="Hugo &#43; Bear = :heart:">
+<meta itemprop="description" content="杨靖武">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <link rel="alternate" type="application/rss+xml" href="https://reardonyang.com/index.xml" title="杨靖武" />
@@ -217,11 +217,8 @@
 
 <a href="/tool/">工具</a>
 
-<a href="/contact/">联系</a>
-
 
 <a href="/blog">文章</a>
-
 
 </nav>
 
@@ -235,18 +232,29 @@
   gtag('config', 'G-NSSE83FXH4');
 </script></header>
   <main>
-<p>💖 我叫杨靖武，<strong>比特币信徒、自由主义者</strong>。</p>
-<p>这里会记录一些日常琐碎，经验心得，以及转载一些文章。你还可以在<a href="https://www.douban.com/people/57644512/">🍭 豆瓣</a>找到我。</p>
+<p><strong>😃  有朋自远方来，不亦乐乎</strong></p>
 <hr>
-<p>近年来，我的工作重心是：</p>
+<p>💖 这里会记录一些个人经验心得，日常琐碎，以及一些有趣的事情。</p>
+<p>此外，希望通过通过写文章的方式，能让我进行更加<strong>专业和深入</strong>的思考。</p>
+<p><strong>还可以在这些地方找到我:</strong></p>
 <ul>
-<li>深入理解比特币，为其在全世界的推广使用做贡献</li>
-<li>探索区块链技术在政务行业的应用</li>
+<li><a href="https://www.douban.com/people/57644512/">豆瓣</a></li>
+<li><a href="https://github.com/ReardonYang">Github</a></li>
+<li><a href="https://twitter.com/ReardonYang">Twitter</a></li>
 </ul>
+<p>如果你有<strong>任何问题</strong>想要交流，请通过<strong>Twitter或者豆瓣</strong>联系我！</p>
+<p><img src="/images/self.jpg" alt="self"></p>
+<p>如果喜欢我的文字，欢迎给我打赏：</p>
+<ul>
+<li>₿-比特币：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
+<li>Ð-狗狗币：<code>DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</code></li>
+</ul>
+<hr>
+<p>“永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”</p>
 
 
   </main>
-  <footer>Powered By <a href="https://reardonyang.com/">💟杨靖武</a>
+  <footer>Powered By <a href="https://reardonyang.com/">💖ReardonYang</a>
 </footer>
 
     
