--- a/tool/index.html
+++ b/tool/index.html
@@ -10,38 +10,38 @@
 <meta name="title" content="工具" />
 <meta name="description" content="🎸 工欲善其事必先利其器
  日常使用工具
- 比特币 Bitcoin：非主权货币；查看详情 Git：版本管理工具；查看详情 Syncthing：P2P同步工具；查看详情 ExpressVPN：科学上网工具；查看详情 蓝灯 Lantern：科学上网工具；查看详情 中本聪研究所：传播中本聪思想；查看详情 Infinite Market Cap：全球资产排名工具；查看详情 维基文库：自由的图书馆；查看详情 Ledger：安全的加密货币/资产硬件钱包；查看详情   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
+ 比特币 Bitcoin：非主权货币 Git：版本管理工具； Syncthing：P2P同步工具； ExpressVPN：科学上网工具； 中本聪研究所：传播中本聪思想； Infinite Market Cap：全球资产排名工具 ； Ledger：安全的加密货币/资产硬件钱包；   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="工具" />
 <meta property="og:description" content="🎸 工欲善其事必先利其器
  日常使用工具
- 比特币 Bitcoin：非主权货币；查看详情 Git：版本管理工具；查看详情 Syncthing：P2P同步工具；查看详情 ExpressVPN：科学上网工具；查看详情 蓝灯 Lantern：科学上网工具；查看详情 中本聪研究所：传播中本聪思想；查看详情 Infinite Market Cap：全球资产排名工具；查看详情 维基文库：自由的图书馆；查看详情 Ledger：安全的加密货币/资产硬件钱包；查看详情   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
+ 比特币 Bitcoin：非主权货币 Git：版本管理工具； Syncthing：P2P同步工具； ExpressVPN：科学上网工具； 中本聪研究所：传播中本聪思想； Infinite Market Cap：全球资产排名工具 ； Ledger：安全的加密货币/资产硬件钱包；   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://reardonyang.com/tool/" /><meta property="og:image" content="https://reardonyang.com/images/share.png"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://reardonyang.com/tool/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="article:section" content="" />
 
-<meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear" />
+<meta property="og:site_name" content="杨靖武" />
 
 
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://reardonyang.com/images/share.png"/>
+<meta name="twitter:image" content="https://reardonyang.com/images/share.jpg"/>
 
 <meta name="twitter:title" content="工具"/>
 <meta name="twitter:description" content="🎸 工欲善其事必先利其器
  日常使用工具
- 比特币 Bitcoin：非主权货币；查看详情 Git：版本管理工具；查看详情 Syncthing：P2P同步工具；查看详情 ExpressVPN：科学上网工具；查看详情 蓝灯 Lantern：科学上网工具；查看详情 中本聪研究所：传播中本聪思想；查看详情 Infinite Market Cap：全球资产排名工具；查看详情 维基文库：自由的图书馆；查看详情 Ledger：安全的加密货币/资产硬件钱包；查看详情   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”"/>
+ 比特币 Bitcoin：非主权货币 Git：版本管理工具； Syncthing：P2P同步工具； ExpressVPN：科学上网工具； 中本聪研究所：传播中本聪思想； Infinite Market Cap：全球资产排名工具 ； Ledger：安全的加密货币/资产硬件钱包；   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”"/>
 
 
 
 <meta itemprop="name" content="工具">
 <meta itemprop="description" content="🎸 工欲善其事必先利其器
  日常使用工具
- 比特币 Bitcoin：非主权货币；查看详情 Git：版本管理工具；查看详情 Syncthing：P2P同步工具；查看详情 ExpressVPN：科学上网工具；查看详情 蓝灯 Lantern：科学上网工具；查看详情 中本聪研究所：传播中本聪思想；查看详情 Infinite Market Cap：全球资产排名工具；查看详情 维基文库：自由的图书馆；查看详情 Ledger：安全的加密货币/资产硬件钱包；查看详情   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”">
+ 比特币 Bitcoin：非主权货币 Git：版本管理工具； Syncthing：P2P同步工具； ExpressVPN：科学上网工具； 中本聪研究所：传播中本聪思想； Infinite Market Cap：全球资产排名工具 ； Ledger：安全的加密货币/资产硬件钱包；   “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”">
 
-<meta itemprop="wordCount" content="17"><meta itemprop="image" content="https://reardonyang.com/images/share.png"/>
+<meta itemprop="wordCount" content="15"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -228,11 +228,8 @@
 
 <a href="/tool/">工具</a>
 
-<a href="/contact/">联系</a>
-
 
 <a href="/blog">文章</a>
-
 
 </nav>
 
@@ -252,16 +249,15 @@
 <hr>
 <p><strong>日常使用工具</strong></p>
 <ul>
-<li>比特币 Bitcoin：非主权货币；<a href="https://bitcoin.org/">查看详情</a></li>
-<li>Git：版本管理工具；<a href="https://git-scm.com/">查看详情</a></li>
-<li>Syncthing：P2P同步工具；<a href="https://syncthing.net/">查看详情</a></li>
-<li>ExpressVPN：科学上网工具；<a href="https://www.expressvpn.com/">查看详情</a></li>
-<li>蓝灯 Lantern：科学上网工具；<a href="https://github.com/getlantern/lantern/">查看详情</a></li>
-<li>中本聪研究所：传播中本聪思想；<a href="https://nakamotoinstitute.org/">查看详情</a></li>
-<li>Infinite Market Cap：全球资产排名工具；<a href="https://8marketcap.com/">查看详情</a></li>
-<li>维基文库：自由的图书馆；<a href="https://wikisource.org/">查看详情</a></li>
-<li>Ledger：安全的加密货币/资产硬件钱包；<a href="https://www.ledger.com/">查看详情</a></li>
+<li><a href="https://bitcoin.org/">比特币 Bitcoin：非主权货币</a></li>
+<li><a href="https://git-scm.com/">Git：版本管理工具</a>；</li>
+<li><a href="https://syncthing.net/">Syncthing：P2P同步工具</a>；</li>
+<li><a href="https://www.expressvpn.com/">ExpressVPN：科学上网工具</a>；</li>
+<li><a href="https://nakamotoinstitute.org/">中本聪研究所：传播中本聪思想</a>；</li>
+<li><a href="https://8marketcap.com/">Infinite Market Cap：全球资产排名工具</a> ；</li>
+<li><a href="https://www.ledger.com/">Ledger：安全的加密货币/资产硬件钱包</a>；</li>
 </ul>
+<p><img src="/images/tool-paper.jpg" alt="tool-paper"></p>
 <hr>
 <p>“古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”</p>
 
@@ -271,7 +267,7 @@
 </p>
 
   </main>
-  <footer>Powered By <a href="https://reardonyang.com/">💟杨靖武</a>
+  <footer>Powered By <a href="https://reardonyang.com/">💖ReardonYang</a>
 </footer>
 
     
