--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>杨靖武</title>
 <meta name="title" content="杨靖武" />
 <meta name="description" content="杨靖武" />
-<meta name="keywords" content="世界旅行,大话比特币,操作手册,生活点滴," />
+<meta name="keywords" content="世界旅行,操作手册,生活点滴,闲话比特币," />
 
 
 <meta property="og:title" content="" />
