upload bitcoin meme

--- a/闲话比特币001可以喝的茅台和不能吃的大饼/index.html
+++ b/闲话比特币001可以喝的茅台和不能吃的大饼/index.html
@@ -262,7 +262,8 @@
 </p>
 
 <content>
-  <ul>
+  <p><img src="/images/bitcoin001.jpg" alt="bitcoin001"></p>
+<ul>
 <li>
 <p>可以喝的茅台和不能吃的大饼，很多人不知道该怎么选。</p>
 </li>
