--- a/闲话比特币002在所有的庞氏骗局中比特币是最好的那个/index.html
+++ b/闲话比特币002在所有的庞氏骗局中比特币是最好的那个/index.html
@@ -278,7 +278,8 @@
 </p>
 
 <content>
-  <ul>
+  <p><img src="/images/bitcoin003.jpg" alt="bitcoin003"></p>
+<ul>
 <li>
 <p>炒币被割，就有如剃发受戒。断除烦恼，了却牵挂。</p>
 </li>
